# pytube

./: .gitignore
pytube_playlist/: pyproject.toml
pytube_playlist/pytube_playlist/: app.py  pendrive.py  pytube_download.py
